# opengl-disaster

./: .gitignore  Cargo.toml  README.md
engine/: Cargo.toml
engine/benches/: benchmarks.rs
engine/shaders/: fragment.shader  vertex.shader
engine/src/: app.rs  camera.rs  lib.rs  shader.rs  shape.rs  vertex.rs  world.rs
engine/src/world/: block.rs  chunk.rs  mod.rs  world.rs
shaders/: fragment.shader  vertex.shader
src/: app.rs  camera.rs  main.rs  shader.rs  shape.rs  vertex.rs  world.rs
